<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WeatherGuy</string>
    <string name="action_settings">Settings</string>
    <string name="appid">4ca365c61eb4ee39b15e931654452e5b</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_updateweather">Updating the weather data</string>

    <!--Preference Strings related to Settings -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_locationtitle">Location</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_unittype" >Temperature Units</string>
    <string name="pref_numberdays_key">numdays</string>
    <string name="pref_numberdaystitle">Number of days</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <string-array name="pref_unittypeentries">
        <item name="pref_metrics">Metric</item>
        <item name="pref_standard">Imperial</item>
    </string-array>
    <string-array name="pref_unitentryValues">
        <item name="pref_metricValues">Metric</item>
        <item name="pref_standardValues">Imperial</item>
    </string-array>
    <string name="pref_unitdefault">Metric</string>
    <string name="pref_locationdefault" translatable="false">1264527</string>
    <string name="pref_numberdaysdefault" translatable="false">7</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
</resources>
